--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,45 @@
 server.port=8080
 
 # Database Configuration - SQL Server
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=smoking;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=smokingcession;encrypt=true;trustServerCertificate=true;characterEncoding=UTF-8;useUnicode=true
 spring.datasource.username=sa
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.connection.characterEncoding=UTF-8
+spring.jpa.properties.hibernate.connection.useUnicode=true
+spring.jpa.properties.hibernate.connection.charSet=UTF-8
 
 # JWT Configuration
 jwt.secret=yourStrongSecretKeyHereShouldBeLongEnoughForSecurity
 jwt.expiration=86400000
+# Th?i h?n token khi ch?n "l?u ??ng nh?p" (30 ngày)
+jwt.remember-me-expiration=2592000000
+
+# Admin Account Configuration
+admin.email=admin@smokingcessation.com
+admin.password=Admin@123
+admin.fullname=Qu?n tr? viên h? th?ng
+
+# VNPay Configuration - Updated with official test credentials
+vnpay.version=2.1.0
+vnpay.command=pay
+vnpay.tmn-code=2QXUI4LC
+vnpay.hash-secret=KEVHVVHIBGborders0OVJXEZOCQKUUQLT
+vnpay.currCode=VND
+vnpay.locale=vn
+# S? d?ng URL localhost cho vi?c test
+vnpay.return-url=http://localhost:8080/api/payment/vnpay-return
+# vnpay.return-url=https://5701-171-243-49-222.ngrok-free.app/api/payment/vnpay-return
+vnpay.payment-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.api-url=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 
 # Email Configuration
 spring.mail.host=smtp.gmail.com
