--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,22 +21,22 @@ spring.jpa.properties.hibernate.connection.charSet=UTF-8
 # JWT Configuration
 jwt.secret=yourStrongSecretKeyHereShouldBeLongEnoughForSecurity
 jwt.expiration=86400000
-# Th?i h?n token khi ch?n "l?u ??ng nh?p" (30 ngày)
+# Thoi han token khi chon "luu dang nhap" (30 ngay)
 jwt.remember-me-expiration=2592000000
 
 # Admin Account Configuration
 admin.email=admin@smokingcessation.com
 admin.password=Admin@123
-admin.fullname=Qu?n tr? viên h? th?ng
+admin.fullname=Quan tri vien he thong
 
 # VNPay Configuration - Updated with official test credentials
 vnpay.version=2.1.0
 vnpay.command=pay
-vnpay.tmn-code=2QXUI4LC
-vnpay.hash-secret=KEVHVVHIBGborders0OVJXEZOCQKUUQLT
+vnpay.tmn-code=4YUP19I4
+vnpay.hash-secret=MDUIFDCRAKLNBPOFIAFNEKFRNMFBYEPX
 vnpay.currCode=VND
 vnpay.locale=vn
-# S? d?ng URL localhost cho vi?c test
+# Su dung URL localhost cho viec test
 vnpay.return-url=http://localhost:8080/api/payment/vnpay-return
 # vnpay.return-url=https://5701-171-243-49-222.ngrok-free.app/api/payment/vnpay-return
 vnpay.payment-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
@@ -67,7 +67,7 @@ spring.thymeleaf.cache=false
 # Swagger Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-# Thêm m?i: ?? hi?n th? chi ti?t h?n v? các tr??ng c?a request
+# Th?m m?i: ?? hi?n th? chi ti?t h?n v? c?c tr??ng c?a request
 springdoc.swagger-ui.defaultModelsExpandDepth=1
 springdoc.swagger-ui.doc-expansion=none
 springdoc.swagger-ui.operationsSorter=method
